# lady-cxx

./: .gitignore  CMakeLists.txt  README.md
doc/: lady-design.tex
src/: barotropic_driver.cpp  common.hpp  lady  plane_shallow_water.cpp  shallow_water_driver.cpp
src/core/: common.hpp  constants.hpp  dycore.cpp  dycore.hpp  io.cpp  io.hpp  neighbor_search.hpp  parcel.cpp  parcel.hpp  quad_points.cpp  quad_points.hpp  shape_function.cpp  shape_function.hpp
src/domain/: cartesian_domain.cpp  cartesian_domain.hpp  domain.cpp  domain.hpp  domain_config.cpp  domain_config.hpp  domain_metric.cpp  domain_metric.hpp
src/field/: cartesian_field.cpp  cartesian_field.hpp  cartesian_field_config.cpp  cartesian_field_config.hpp  field.cpp  field.hpp  field_config.cpp  field_config.hpp  structured_field.cpp  structured_field.hpp  structured_field_config.cpp  structured_field_config.hpp
src/lady/: cartesian.hpp
src/mesh/: cartesian_mesh.cpp  cartesian_mesh.hpp  cartesian_mesh_config.cpp  cartesian_mesh_config.hpp  mesh.cpp  mesh.hpp  mesh_config.cpp  mesh_config.hpp  structured_mesh.cpp  structured_mesh.hpp  structured_mesh_config.cpp  structured_mesh_config.hpp
src/test/: cartesian_domain_2d_fixture.hpp  dycore_cartesian_2d_fixture.hpp  test_domain.cpp  test_forces.cpp  test_input_data.cpp  test_mesh.cpp  test_neighbor_search.cpp  test_parcel.cpp  test_quad_points.cpp  test_shape_function.cpp  test_time_manager.cpp
src/tools/: plot_barotropic_fields.ncl  plot_parcels.ncl  plot_quad_points.ncl  plot_shallow_water_fields.ncl
src/util/: alert.cpp  alert.hpp  io.cpp  io.hpp  logger.cpp  logger.cpp.backup  logger.hpp  logger.hpp.backup  time_manager.cpp  time_manager.hpp  timer.cpp  timer.hpp
